BUG#13081: Disable ROR-index_merge for NDB tables (by adding a HA_KEY_SCAN_NOT_ROR index flag) as NDB index scans are not guaranteed to be ROR scans.